--- a/SteamTracker.csproj
+++ b/SteamTracker.csproj
@@ -83,6 +83,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="components\Prompt.cs" />
     <Compile Include="dtos\Game.cs" />
     <Compile Include="dtos\GamesListResponse.cs" />
     <Compile Include="dtos\SteamResponse.cs" />
@@ -123,5 +124,6 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
